--- a/app/src/main/res/layout/item_view_jdcs_select.xml
+++ b/app/src/main/res/layout/item_view_jdcs_select.xml
@@ -9,23 +9,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dimen_5dp"
-        android:background="@drawable/bnt_jb_shape_vip_item">
+        android:background="@mipmap/ic_jincoucz">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="-20dp"
-            android:src="@mipmap/ic_czhy"/>
         <TextView
             android:id="@+id/tv1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/dimen_25dp"
+            android:drawableStart="@drawable/ic_dou"
             android:drawablePadding="@dimen/dimen_5dp"
-            android:text="自动续费"
-            android:textColor="@color/color_000000"
+            android:text="1000"
+            android:textColor="@color/color_text_theme"
             android:textSize="@dimen/sp_14" />
 
         <TextView
@@ -33,13 +28,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv1"
-            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true"
             android:layout_marginTop="@dimen/dimen_5dp"
-            android:layout_marginBottom="@dimen/dimen_20dp"
-            android:drawablePadding="@dimen/dimen_5dp"
-            android:text="19.8元/月"
-            android:textColor="@color/color_000000"
-            android:textSize="@dimen/dimen_12dp" />
+            android:text="￥100"
+            android:textColor="@color/color_text_theme"
+            android:textSize="12sp" />
 
     </RelativeLayout>
 
@@ -47,34 +40,34 @@
         android:id="@+id/rv_select_no"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:layout_margin="@dimen/dimen_5dp"
-        android:background="@drawable/bnt_jb_shape_vip_item_1">
+        android:layout_alignTop="@id/rv_select_yes"
+        android:layout_alignBottom="@id/rv_select_yes"
+        android:background="@drawable/bnt_jb_shape_vip_item_1"
+        android:visibility="invisible">
+
 
         <TextView
-            android:id="@+id/tv11"
+            android:id="@+id/tv12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/dimen_25dp"
+            android:drawableStart="@drawable/ic_dou_h"
             android:drawablePadding="@dimen/dimen_5dp"
-            android:text="自动续费"
-            android:textColor="@color/color_text_theme"
+            android:text="1000"
+            android:textColor="@color/color_999999"
             android:textSize="@dimen/sp_14" />
 
         <TextView
             android:id="@+id/tv22"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tv11"
-            android:layout_centerHorizontal="true"
+            android:layout_below="@id/tv12"
+            android:layout_centerInParent="true"
             android:layout_marginTop="@dimen/dimen_5dp"
-            android:layout_marginBottom="@dimen/dimen_20dp"
-            android:drawablePadding="@dimen/dimen_5dp"
-            android:text="19.8元/月"
-            android:textColor="@color/color_text_theme"
-            android:textSize="@dimen/dimen_12dp" />
+            android:text="￥100"
+            android:textColor="@color/color_999999"
+            android:textSize="12sp" />
 
     </RelativeLayout>
-
 </RelativeLayout>
