--- a/app/src/main/res/layout/activity_mine_wzq.xml
+++ b/app/src/main/res/layout/activity_mine_wzq.xml
@@ -29,7 +29,7 @@
             android:layout_centerHorizontal="true"
             android:layout_margin="@dimen/dimen_15dp"
             android:gravity="center"
-            android:text="徽章墙"
+            android:text="勋章墙"
             android:textColor="@color/color_ffffff"
             android:textSize="@dimen/dimen_20dp"
             android:textStyle="bold" />
@@ -71,7 +71,7 @@
                     android:id="@+id/tv_jifen_num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="我的徽章"
+                    android:text="我的勋章"
                     android:textColor="@color/color_ffffff"
                     android:textSize="24sp"
                     android:textStyle="bold" />
