--- a/app/src/main/res/layout/item_home_two_task_select.xml
+++ b/app/src/main/res/layout/item_home_two_task_select.xml
@@ -33,6 +33,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/tv_explain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/iv_head_img"
@@ -66,6 +67,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_day"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="20"
@@ -169,6 +171,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/tv_explain1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/iv_head_img1"
@@ -202,6 +205,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_day1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="20"
