--- a/app/src/main/res/layout/activity_mine_rwzx.xml
+++ b/app/src/main/res/layout/activity_mine_rwzx.xml
@@ -96,6 +96,7 @@
                 android:layout_margin="@dimen/dp_10">
 
                 <LinearLayout
+                    android:id="@+id/ll_go_1"
                     android:layout_width="@dimen/dimen_0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/dimen_5dp"
@@ -119,6 +120,7 @@
                         android:textSize="@dimen/sp_14" />
 
                     <TextView
+                        android:id="@+id/tv_state"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/dp_10"
@@ -132,6 +134,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_go_2"
                     android:layout_width="@dimen/dimen_0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/dimen_5dp"
@@ -168,6 +171,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_go_3"
                     android:layout_width="@dimen/dimen_0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/dimen_5dp"
