--- a/app/src/main/res/layout/activity_facility_add_sb.xml
+++ b/app/src/main/res/layout/activity_facility_add_sb.xml
@@ -51,6 +51,7 @@
             <View
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
+                android:visibility="gone"
                 android:layout_weight="1" />
 
             <TextView
@@ -58,6 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/dimen_30dp"
+                android:visibility="gone"
                 android:layout_marginVertical="@dimen/dp_10"
                 android:background="@drawable/btn_shape_bj_theme_25"
                 android:gravity="center"
