--- a/app/src/main/res/layout/activity_course_start.xml
+++ b/app/src/main/res/layout/activity_course_start.xml
@@ -91,7 +91,6 @@
             android:layout_weight="1"
             android:overScrollMode="never" />
 
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -142,6 +141,7 @@
                         android:textSize="16sp" />
 
                     <TextView
+                        android:id="@+id/tv_time"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/bj_shape_line_f2_5"
@@ -164,11 +164,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/dimen_7dp"
-                        android:text="运动时间"
+                        android:text="运动强度"
                         android:textColor="@color/color_000000"
                         android:textSize="16sp" />
 
                     <TextView
+                        android:id="@+id/tv_intension"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/bj_shape_line_f2_5"
@@ -189,12 +190,14 @@
                 android:gravity="center_horizontal">
 
                 <ImageView
+                    android:id="@+id/iv_out"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/dimen_25dp"
                     android:src="@drawable/icon_ksks_tc" />
 
                 <ImageView
+                    android:id="@+id/iv_jr"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dimen_50dp"
