--- a/app/src/main/res/layout/activity_rate_control.xml
+++ b/app/src/main/res/layout/activity_rate_control.xml
@@ -141,6 +141,7 @@
                 </RelativeLayout>
 
                 <TextView
+                    android:id="@+id/tv_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/rl"
@@ -149,7 +150,7 @@
                     android:background="@drawable/jb_shape_line_fff_zx"
                     android:gravity="center"
                     android:padding="@dimen/dp_10"
-                    android:text="轻度有氧运动, 有点费劲但不会太喘"
+                    android:text="无"
                     android:textColor="@color/color_666666"
                     android:textSize="12sp" />
             </RelativeLayout>
@@ -196,6 +197,7 @@
                 android:background="@drawable/ic_shade_img">
 
                 <RelativeLayout
+                    android:id="@+id/rl_1"
                     android:layout_width="@dimen/dimen_120dp"
                     android:layout_height="wrap_content">
 
@@ -237,6 +239,7 @@
                     android:background="#E6E6E6" />
 
                 <RelativeLayout
+                    android:id="@+id/rl_2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
