--- a/app/src/main/res/layout/fragment_select_map.xml
+++ b/app/src/main/res/layout/fragment_select_map.xml
@@ -11,13 +11,14 @@
         <ImageView
             android:id="@+id/iv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_180dp"
             android:layout_marginStart="@dimen/dimen_20dp"
             android:layout_marginTop="@dimen/dp_10"
             android:adjustViewBounds="true"
             android:src="@mipmap/ic_11" />
 
         <TextView
+            android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignStart="@id/iv"
