--- a/app/src/main/res/layout/activity_mine_jindou_cz.xml
+++ b/app/src/main/res/layout/activity_mine_jindou_cz.xml
@@ -43,7 +43,7 @@
                     android:textSize="@dimen/sp_14" />
 
                 <TextView
-
+                    android:id="@+id/tv_balance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv"
