--- a/app/src/main/res/layout/item_two_jlxq.xml
+++ b/app/src/main/res/layout/item_two_jlxq.xml
@@ -8,6 +8,7 @@
     android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/iv_imgUrl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_2" />
@@ -20,6 +21,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="智能跑步机"
@@ -27,6 +29,7 @@
             android:textSize="13sp" />
 
         <TextView
+            android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_10"
