--- a/app/src/main/res/layout/item_user_lw_shou.xml
+++ b/app/src/main/res/layout/item_user_lw_shou.xml
@@ -17,7 +17,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/ic_17" />
+
+
     </com.jxkj.fit_5a.conpoment.view.SquareLinearLayout>
+
+    <ImageView
+        android:id="@+id/iv_select"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="@dimen/dimen_15dp"
+        android:src="@drawable/wxz_1" />
 
     <RelativeLayout
         android:layout_width="match_parent"
