--- a/app/src/main/res/layout/item_dev.xml
+++ b/app/src/main/res/layout/item_dev.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:orientation="vertical" >
+    android:paddingRight="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
 
         <LinearLayout
@@ -17,7 +17,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="46dp"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/device_name"
@@ -35,23 +35,24 @@
                 android:textSize="12dp" />
 
         </LinearLayout>
+
         <TextView
             android:id="@+id/device_rsisi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="rsisi"
-            android:layout_marginTop="10dp"
             android:layout_alignParentRight="true"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
+            android:text="rsisi"
             android:textColor="#ff6699ff"
             android:textSize="12dp" />
 
-        <ImageView
-            android:layout_centerVertical="true"
-            android:id="@+id/imageView2"
-            android:layout_width="42dp"
-            android:layout_height="25dp"
-            android:src="@mipmap/ic_ble" />
+<!--        <ImageView-->
+<!--            android:id="@+id/imageView2"-->
+<!--            android:layout_width="42dp"-->
+<!--            android:layout_height="25dp"-->
+<!--            android:layout_centerVertical="true"-->
+<!--            android:src="@mipmap/ic_ble" />-->
 
     </RelativeLayout>
 
