--- a/app/src/main/res/layout/activity_create_circle.xml
+++ b/app/src/main/res/layout/activity_create_circle.xml
@@ -26,6 +26,7 @@
             android:padding="@dimen/dimen_20dp">
 
             <ImageView
+                android:id="@+id/iv_bgImg"
                 android:layout_width="@dimen/dimen_80dp"
                 android:layout_height="@dimen/dimen_80dp"
                 android:layout_gravity="center_horizontal"
@@ -176,6 +177,7 @@
                     android:gravity="center_vertical">
 
                     <TextView
+                        android:id="@+id/tv_sb_type"
                         android:layout_width="@dimen/dimen_100dp"
                         android:layout_height="wrap_content"
                         android:drawableEnd="@drawable/icon_jiantou_xia_66"
@@ -192,6 +194,7 @@
                         android:background="@color/line_color" />
 
                     <TextView
+                        android:id="@+id/tv_sb_name"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -247,7 +250,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:padding="@dimen/dp_10"
-                        android:text="运动任务"
+                        android:text="目标"
                         android:textColor="@color/color_000000"
                         android:textSize="14sp" />
 
@@ -258,6 +261,7 @@
                         android:background="@color/line_color" />
 
                     <TextView
+                        android:id="@+id/tv_mblx"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -293,6 +297,7 @@
                         android:background="@color/line_color" />
 
                     <TextView
+                        android:id="@+id/tv_zqsc"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
