--- a/app/src/main/res/layout/fragment_interest_all.xml
+++ b/app/src/main/res/layout/fragment_interest_all.xml
@@ -8,5 +8,28 @@
         android:id="@+id/rv_list"
         android:overScrollMode="never"
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:id="@+id/lv_not"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/dimen_100dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_cart_not" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="还没有圈子哦~"
+            android:textColor="@color/color_999999"
+            android:textSize="@dimen/sp_14" />
+    </LinearLayout>
 </LinearLayout>
