--- a/app/src/main/res/layout/item_home_three_sq.xml
+++ b/app/src/main/res/layout/item_home_three_sq.xml
@@ -14,6 +14,7 @@
         android:src="@mipmap/ic_13" />
 
     <TextView
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_10"
@@ -29,8 +30,8 @@
 
         <ImageView
             android:id="@+id/iv_head_img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/dimen_30dp"
+            android:layout_height="@dimen/dimen_30dp"
             android:layout_alignTop="@id/tv_name"
             android:layout_alignBottom="@id/tv_name"
             android:src="@mipmap/ic_6" />
@@ -47,6 +48,7 @@
             android:textSize="11sp" />
 
         <TextView
+            android:id="@+id/tv_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@id/tv_name"
