--- a/app/src/main/res/layout/activity_community_add.xml
+++ b/app/src/main/res/layout/activity_community_add.xml
@@ -20,6 +20,7 @@
         android:padding="@dimen/dp_10" />
 
     <EditText
+        android:id="@+id/et_content"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_150dp"
         android:layout_margin="@dimen/dimen_20dp"
@@ -32,16 +33,35 @@
         android:textSize="@dimen/sp_14" />
 
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_topic_jin"
-        android:drawableEnd="@drawable/icon_jiantou_you_99"
-        android:drawablePadding="10dp"
-        android:padding="@dimen/dimen_20dp"
-        android:text="添加话题"
-        android:textColor="@color/color_333333"
-        android:textSize="15sp" />
+        android:orientation="horizontal"
+        android:padding="@dimen/dimen_20dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_topic_jin"
+            android:drawablePadding="10dp"
+            android:text="添加话题"
+            android:textColor="@color/color_333333"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/tv_topics"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:layout_height="wrap_content"
+            android:drawableEnd="@drawable/icon_jiantou_you_99"
+            android:drawablePadding="10dp"
+            android:text="合适的话题会有更多赞~"
+            android:textColor="@color/color_999999"
+            android:textSize="13sp" />
+
+    </LinearLayout>
+
 
     <View
         android:layout_width="match_parent"
@@ -49,16 +69,34 @@
         android:layout_margin="@dimen/dimen_15dp"
         android:background="@color/line_color" />
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableStart="@drawable/icon_dw1"
-        android:drawableEnd="@drawable/icon_jiantou_you_99"
-        android:drawablePadding="10dp"
-        android:padding="@dimen/dimen_20dp"
-        android:text="你在哪里"
-        android:textColor="@color/color_333333"
-        android:textSize="15sp" />
+        android:orientation="horizontal"
+        android:padding="@dimen/dimen_20dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_topic_jin"
+            android:drawablePadding="10dp"
+            android:text="你在哪里"
+            android:textColor="@color/color_333333"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/tv_position"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:drawableEnd="@drawable/icon_jiantou_you_99"
+            android:drawablePadding="10dp"
+            android:text=" "
+            android:gravity="end"
+            android:textColor="@color/color_999999"
+            android:textSize="13sp" />
+
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
