--- a/app/src/main/res/layout/item_home_three_top.xml
+++ b/app/src/main/res/layout/item_home_three_top.xml
@@ -25,6 +25,7 @@
     </RelativeLayout>
 
     <TextView
+        android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_10"
