--- a/app/src/main/res/layout/activity_mine_topic.xml
+++ b/app/src/main/res/layout/activity_mine_topic.xml
@@ -264,12 +264,23 @@
             android:id="@+id/rv_list_tp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:overScrollMode="never"
             android:layout_below="@id/ll"
             android:layout_marginBottom="@dimen/dimen_20dp"
+            android:overScrollMode="never"
+            android:visibility="gone"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <ImageView
+        android:id="@+id/tv_add_dt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="@dimen/dimen_20dp"
+        android:layout_marginBottom="@dimen/dimen_150dp"
+        android:src="@drawable/ic_add_dt" />
+
 
 </RelativeLayout>
 
