--- a/app/src/main/res/layout/fragment_home_three.xml
+++ b/app/src/main/res/layout/fragment_home_three.xml
@@ -12,6 +12,7 @@
 
 
         <TextView
+            android:id="@+id/tv_search"
             android:layout_width="0dp"
             android:layout_height="@dimen/dimen_50dp"
             android:layout_marginStart="@dimen/dimen_15dp"
