--- a/app/src/main/res/layout/activity_user_home.xml
+++ b/app/src/main/res/layout/activity_user_home.xml
@@ -68,6 +68,7 @@
                             android:textSize="20sp" />
 
                         <TextView
+                            android:id="@+id/tv_state"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/nickname"
@@ -146,6 +147,7 @@
                     app:layout_collapseMode="parallax">
 
                     <TextView
+                        android:id="@+id/tv_gz_zt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:drawableStart="@drawable/icon_like_b"
@@ -178,7 +180,7 @@
                 </RelativeLayout>
 
                 <TextView
-                    android:id="@+id/tv_gz_zt"
+                    android:id="@+id/tv_dj"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/dimen_20dp"
                     android:layout_below="@id/rl"
@@ -213,6 +215,7 @@
                         android:padding="12dp">
 
                         <TextView
+                            android:id="@+id/tv_gz"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="15"
@@ -239,6 +242,7 @@
                         android:padding="12dp">
 
                         <TextView
+                            android:id="@+id/tv_fs"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="15"
@@ -265,6 +269,7 @@
                         android:padding="12dp">
 
                         <TextView
+                            android:id="@+id/tv_sc"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="15"
@@ -291,6 +296,7 @@
                         android:padding="12dp">
 
                         <TextView
+                            android:id="@+id/tv_lw"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="15"
@@ -312,7 +318,7 @@
                     android:id="@+id/view"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_below="@id/tv_gz_zt"
+                    android:layout_below="@id/tv_dj"
                     android:layout_marginTop="@dimen/dimen_20dp"
                     android:background="@color/line_color" />
 
