--- a/app/src/main/res/layout/item_topic_all.xml
+++ b/app/src/main/res/layout/item_topic_all.xml
@@ -24,10 +24,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv1"
         android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginBottom="@dimen/dp_10"
         android:layout_toStartOf="@id/iv"
         android:ellipsize="end"
-        android:maxLines="2"
-        android:minLines="2"
+        android:maxLines="3"
+        android:minLines="3"
         android:padding="@dimen/dimen_5dp"
         android:paddingStart="@dimen/dimen_5dp"
         android:text="分享一些健身的随身好物或者成都市大分享一些健身的随身好物或者成都市大..."
@@ -44,7 +45,8 @@
         android:paddingStart="@dimen/dimen_5dp"
         android:text="\@来自爱华 ·"
         android:textColor="@color/color_333333"
-        android:textSize="11sp" />
+        android:textSize="11sp"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/tv4"
@@ -56,14 +58,15 @@
         android:paddingStart="@dimen/dimen_5dp"
         android:text="2020-06-21"
         android:textColor="@color/color_999999"
-        android:textSize="10sp" />
+        android:textSize="10sp"
+        android:visibility="gone" />
 
     <com.jxkj.fit_5a.conpoment.view.SquareImageView
         android:id="@+id/iv"
         android:layout_width="@dimen/dimen_60dp"
         android:layout_height="@dimen/dimen_60dp"
         android:layout_alignTop="@id/tv2"
-        android:layout_alignBottom="@id/tv3"
+        android:layout_alignBottom="@id/tv2"
         android:layout_alignParentEnd="true"
         android:src="@mipmap/icon_app_logo" />
 
