--- a/app/src/main/res/layout/item_circle_dynamic.xml
+++ b/app/src/main/res/layout/item_circle_dynamic.xml
@@ -13,6 +13,7 @@
         android:src="@mipmap/ic_6" />
 
     <TextView
+        android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/iv_head_img"
@@ -43,6 +44,7 @@
         android:textSize="14sp" />
 
     <TextView
+        android:id="@+id/tv_ygz"
         android:layout_width="@dimen/dimen_60dp"
         android:layout_height="@dimen/dimen_25dp"
         android:layout_alignTop="@id/iv_head_img"
@@ -56,6 +58,7 @@
         android:visibility="invisible" />
 
     <TextView
+        android:id="@+id/tv_wgz"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/dimen_25dp"
         android:layout_alignTop="@id/iv_head_img"
@@ -80,27 +83,40 @@
         android:orientation="horizontal">
 
         <com.jxkj.fit_5a.conpoment.view.SquareImageView
+            android:id="@+id/siv_1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/dimen_5dp"
             android:layout_weight="1"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_7" />
+            android:src="@mipmap/ic_7"
+            android:visibility="gone" />
 
         <com.jxkj.fit_5a.conpoment.view.SquareImageView
+            android:id="@+id/siv_2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/dimen_5dp"
             android:layout_weight="1"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_7" />
+            android:src="@mipmap/ic_7"
+            android:visibility="gone" />
 
         <com.jxkj.fit_5a.conpoment.view.SquareImageView
+            android:id="@+id/siv_3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/dimen_5dp"
             android:layout_weight="1"
             android:scaleType="centerCrop"
+            android:src="@mipmap/ic_7"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/siv_4"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_220dp"
+            android:scaleType="center"
             android:src="@mipmap/ic_7" />
 
     </LinearLayout>
@@ -116,18 +132,31 @@
         android:textColor="@color/color_666666"
         android:textSize="14sp" />
 
-    <TextView
-        android:id="@+id/tv_xihuan"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/tv_browse_num"
         android:layout_toStartOf="@id/tv_liuyan"
-        android:drawableStart="@drawable/icon_xin_99_d"
-        android:drawablePadding="@dimen/dimen_5dp"
-        android:gravity="center_vertical"
-        android:padding="@dimen/dp_10"
-        android:text="1358"
-        android:textColor="@color/color_999999" />
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/iv_xihuan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon_xin_99_d" />
+
+        <TextView
+            android:id="@+id/tv_xihuan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:padding="@dimen/dp_10"
+            android:text="1358"
+            android:textColor="@color/color_999999" />
+
+
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/tv_liuyan"
