--- a/app/src/main/res/layout/activity_user_home.xml
+++ b/app/src/main/res/layout/activity_user_home.xml
@@ -54,7 +54,7 @@
                             android:layout_height="70dp"
                             android:layout_centerHorizontal="true"
                             android:src="@mipmap/bg_header"
-                            android:visibility="gone" />
+                            android:visibility="invisible" />
 
                         <TextView
                             android:id="@+id/nickname"
