--- a/app/src/main/res/layout/item_user_top.xml
+++ b/app/src/main/res/layout/item_user_top.xml
@@ -20,6 +20,7 @@
             android:src="@mipmap/ic_11" />
 
         <ImageView
+            android:id="@+id/iv_jr1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignStart="@id/iv_shop_pic"
@@ -29,6 +30,7 @@
             android:src="@mipmap/ic_add_qz" />
 
         <TextView
+            android:id="@+id/iv_jr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/iv_shop_pic"
